# domain_scraper_python

./: .gitignore  Makefile  README.md  pyproject.toml  scrape_gui.py  scrape_hostpinnacle.py  scrape_kenyawebexperts.py  scrape_truehost.py  utility.py
results/: GFG.html  domains.xls
